# Data_Science_Machine_Learning_Practice

./: README.md
End To End Data Science Project Implementation KN/: pyproject.toml
End To End Data Science Project Implementation KN/app/api/components/: data_ingestion.py  model_trainer.py
End To End Data Science Project Implementation KN/app/api/pipeline/: predict_pipeline.py
Potato Disease Classification/notebook/: potato-disease-classification-model-using-image-data-generator.ipynb
Potato Disease Classification/notebook/.ipynb_checkpoints/: potato-disease-classification-model-using-image-data-generator-checkpoint.ipynb
